--- a/package.json
+++ b/package.json
@@ -1,40 +1,49 @@
 {
-  "name": "application-name",
-  "version": "0.0.1",
-  "private": true,
+  "name": "NodeApp",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "dev": "nodemon app.js",
+    "prod": "ENV=production nodemon app.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "generate-docs": "jsdoc -r . -c jsdoc.conf"
   },
+  "nodemonConfig": {
+    "ignore": [
+      "public/cms/*"
+    ]
+  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.23",
-    "@types/socket.io-client": "^1.4.29",
-    "angular-froala-wysiwyg": "^2.7.1",
-    "apn": "^2.2.0",
-    "bcrypt": "^1.0.3",
+    "@sendgrid/mail": "^6.4.0",
+    "aws-sdk": "^2.628.0",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.17.1",
-    "connect-multiparty": "^2.1.0",
-    "ejs": "^1.0.0",
-    "express": "3.5.1",
-    "express-jwt": "^5.3.0",
-    "express-myconnection": "1.0.4",
-    "express-session": "^1.15.2",
-    "express-validator": "^4.2.1",
-    "form-validate": "0.0.7",
-    "jade": "*",
-    "jsonwebtoken": "^7.4.3",
-    "lodash": "^4.17.4",
-    "multer": "^1.3.0",
-    "mysql": "2.2.0",
-    "ng2-toastr": "^4.1.2",
-    "node-pushnotifications": "^1.0.18",
-    "nodemailer": "^4.1.3",
-    "nodemailer-ses-transport": "^1.5.1",
-    "q": "^1.5.0",
-    "rootpath": "^0.1.2",
+    "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
+    "cookie-session": "^1.3.3",
+    "cors": "^2.8.5",
+    "cron": "^1.7.2",
+    "ejs": "^2.6.2",
+    "express": "^4.17.1",
+    "express-validator": "^6.1.1",
+    "fcm-node": "^1.5.1",
+    "fs-extra": "^9.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.20",
+    "moment": "^2.24.0",
+    "mongoose": "^5.9.18",
+    "morgan": "^1.9.1",
+    "multer": "^1.4.1",
+    "multer-s3": "^2.9.0",
+    "nodemon": "^1.19.4",
+    "promise": "^8.0.3",
+    "request": "^2.88.0",
+    "request-ip": "^2.1.3",
     "s3": "^4.4.0",
-    "socket.io": "^2.0.3",
-    "tmp": "0.0.33",
-    "validate-fields": "^3.7.1"
+    "serve-favicon": "^2.5.0",
+    "twilio": "^3.33.0"
   }
 }
